# DA

./: .gitignore  main.py
lab-1/: CMakeLists.txt
lab-1/src/: main.cpp  result.cpp
lab-2-3/: CMakeLists.txt
lab-2-3/src/: main.cpp  result.cpp
lab-4/: CMakeLists.txt
lab-4/src/: main.cpp
tools/: CMakeLists.txt  main.cpp
tools/containers/: avl_tree.hpp  pair.hpp  string.hpp  vector.cpp  vector.hpp  vector.inl  vector_tools.hpp
